--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,10 +21,21 @@
       </a>
       <%= link_to image_tag('logo.png', :width => '180px'), root_url, :class => "brand" %>
       <div class="nav-collapse pull-right">
-        <ul class="nav">       
-          <li><%= link_to "All Users", users_path %></li>
-          <li><%= link_to "Sign Up", signup_path %></li>
-          <li><%= link_to "Sign In", signin_path %></li>
+        <ul class="nav">      
+
+          <% if self.signed_in? == false %>
+
+            <li><%= link_to "All Users", users_path %></li>
+            <li><%= link_to "Sign Up", signup_path %></li>
+            <li><%= link_to "Sign In", signin_path %></li>
+
+          <% else %>
+
+            <li><%= link_to "All Users", users_path %></li>
+            <li><%= link_to "My Profile", user_path(current_user.id) %></li>
+            <li><%= link_to "Sign Out", signout_path, method: :delete %></li>
+
+          <% end %>
         </ul>
       </div>
     </div>
