Initial Commit At Step 11 Week 9 Day 2

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -5,6 +5,7 @@
   .span4.offset2
     %a{:href => "#"}
       %img{:height => "2600", :src => "https://ativa.s3.amazonaws.com/uploads/admin/avatar/12/sunglass.jpg", :width => "2600"}
+      %h3.pagination-centered= @user.type
   %br/
   %br/
   .span4
