--- a/app/views/user_mailer/admin_confirmation.html.haml
+++ b/app/views/user_mailer/admin_confirmation.html.haml
@@ -1,3 +1,3 @@
 %p Congrats, we would like you to be an admin of Ativa. Feel special
 %p Here's your confirmation code: 
-= @generated_number
+= link_to 'Sign Up here', admin_new_url(generated_number: @generated_number)
